--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <div class="container">
     <!-- 表頭Logo與標題 -->
     <header>
-      <img src="品牌LOGO.png" alt="台南看好房 LOGO">
+      <img src="台南看好房LOGO.png" alt="台南看好房 LOGO">
       <h1>台南看好房</h1>
     </header>
 
