--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <button type="button" class="btn-next" id="nextBtn">下一步</button>
       </div>
       <input type="hidden" name="_captcha" value="false">
-      <input type="hidden" name="_next" value="https://YH-0504.github.io/House_In_Tainan/thankyou.html">
+      <input type="hidden" name="_next" value="https://github.com/YH-0504/House_In_Tainan/thankyou.html">
     </form>
 
     <!-- 表尾資訊 -->
