--- a/thankyou.html
+++ b/thankyou.html
@@ -1,39 +1,52 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>感謝填寫</title>
   <style>
     body {
-      background-color: #f9f9f9;
+      background-color: #d9cfc7; /* 與原網站一致的背景 */
+      font-family: "Helvetica", sans-serif;
+      color: #333;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      font-family: "Helvetica", sans-serif;
-      flex-direction: column;
-      color: #333;
+      min-height: 100vh;
+      margin: 0;
+    }
+    .message-box {
+      background: #fff;
+      padding: 2rem 3rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      text-align: center;
     }
     h1 {
-      font-size: 2rem;
-      color: #4caf50;
+      color: #3e3e3e;
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
     }
     p {
-      margin-top: 1rem;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
+      margin-bottom: 1rem;
     }
     a {
-      color: #4caf50;
+      display: inline-block;
+      margin-top: 1rem;
       text-decoration: none;
-      margin-top: 1.5rem;
-      font-weight: bold;
+      color: #fff;
+      background-color: #4caf50;
+      padding: 0.6rem 1.2rem;
+      border-radius: 6px;
     }
   </style>
 </head>
 <body>
-  <h1>🎉 感謝您填寫表單！</h1>
-  <p>小張會根據您的需求與您聯繫</p>
-  <a href="https://www.instagram.com/house_in_tainan/" target="_blank">👉 前往 IG 看更多物件</a>
+  <div class="message-box">
+    <h1>感謝您的填寫！</h1>
+    <p>我們已經收到您的需求，小張會盡快與您聯繫 ✨</p>
+    <a href="https://www.instagram.com/house_in_tainan/" target="_blank">追蹤小張 IG</a>
+  </div>
 </body>
 </html>
