--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
       <!-- 第4頁 -->
       <div class="step">
-        <label>5. 自備款 (現金) 大約：</label>
+        <label>5. 自備款 (現金) 大約：(萬)</label>
         <input type="number" name="budgetCash">
         <small>許多人不知道能負擔多少，這部分可讓小張更明確幫您規劃目標，提供給您最適合您的房源。</small>
       </div>
