--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
         <input type="text" name="name" placeholder="怎麼稱呼您：" required>
         <input type="tel" name="phone" placeholder="手機電話：" required>
         <input type="text" name="lineID" placeholder="LINE ID：" required>
+        <small style="display: block; margin-top: 1rem; font-size: 0.85rem; color: #555;">
+  個人資料保護協議：您所填入的資料僅授權 <strong>台南看好房 - 張英泓</strong> 本人查閱，僅用於聯絡與服務使用，不會有個資外洩之疑慮，請安心填寫。
+        </small>
       </div>
 
       <!-- 導航按鈕 -->
