--- a/index.html
+++ b/index.html
@@ -222,22 +222,23 @@
   const container = document.getElementById(id);
   let nameAttr = '';
 
-  // 根據不同的區塊設定 name 屬性
-  if (id === 'areaOptions') nameAttr = 'area[]';
-  else if (id === 'typeOptions') nameAttr = 'type[]';
-  else if (id === 'kindOptions') nameAttr = 'kind[]';
+  // 設定每一組選項的 name
+  if (id === 'areaOptions') nameAttr = 'preferredAreas[]';
+  else if (id === 'typeOptions') nameAttr = 'propertyTypes[]';
+  else if (id === 'kindOptions') nameAttr = 'propertyKinds[]';
 
   opts.forEach(opt => {
     const lbl = document.createElement('label');
     const cb = document.createElement('input');
     cb.type = 'checkbox';
     cb.value = opt;
-    cb.name = nameAttr;  // ✅ 加入這行，讓 checkbox 有正確的 name
+    cb.name = nameAttr; // ✅ 有 name 才會被送出
     cb.addEventListener('change', () => limitSel(id, max));
     lbl.append(cb, ' ' + opt);
     container.append(lbl);
   });
 }
+
     function limitSel(id, max) {
       const cont = document.getElementById(id);
       const cbs = cont.querySelectorAll('input[type=checkbox]');
